Consider canvas offset in edit operations...
While at it add spatial calibration checks to the rebuild command